published module